--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,8 +13,8 @@
     tools:context=".Login">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@color/black"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"/>
@@ -29,7 +29,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_marginTop="20dp"
         >
 
@@ -43,7 +43,7 @@
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_marginTop="10dp"
         app:passwordToggleEnabled="true"
         >
@@ -93,7 +93,7 @@
             android:textColor="@color/black"/>
 
         <TextView
-            android:id="@+id/txt_signin"
+            android:id="@+id/txt_signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
